[tool.poetry]
name = "willc"
version = "0.1.0"
description = "My version of the `wc` tool"
authors = ["WillDenby <119456795+WillDenby@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
willc = "willc.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
