[tool.poetry]
name = "willc"
version = "0.1.1"
description = "My version of the `wc` tool"
license = "MIT"
authors = ["WillDenby <119456795+WillDenby@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/WillDenby/willc"

[tool.poetry.scripts]
willc = "willc.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




